Implemented loading of initial setting values and updating of settings

--- a/src/SettingsConfig.json
+++ b/src/SettingsConfig.json
@@ -63,13 +63,16 @@
     },
     {
       "name": "Account",
+      "collection": "businesses",
+      "document": "business",
+      "needsManager": true,
       "settings": [
         {
           "title": "Establishment Settings",
           "type": "subcategory",
           "settings": [
             {
-              "id": "establishmentname",
+              "id": "businessName",
               "title": "Establishment Name",
               "type": "text"
             },
